# util-library

./: .gitattributes  .gitignore  README.md  Untitled2.m  pyproject.toml  setup_matlab_paths.m  setup_paths.csh  setup_paths.sh
fortran/bfield_library_jdl/: CMakeLists.txt
fortran/bfield_library_jdl/build.debug/: .gitignore
fortran/bfield_library_jdl/src/: DIIID_routines_mod.f90  IPEC_routines_mod.f90  M3DC1_routines_mod.f90  NSTX_routines_mod.f90  VMEC_routines_mod.f90  XPAND_routines_mod.f90  bfield_module.f90  bgrid_routines_mod.f90  biotsavart_module.f90  bnorm_routines.f90  bspline90_22.f90  coil_typedef.f90  fieldline_follow_mod.F90  fieldline_follow_mod.f90  g3d_module.f90  g3df_math_routines_mod.f90  kind_mod.f90  numerics_module.f90  phys_const.f90  rmp_module.f90  screening_module.f90  setup_bfield.f90  util_routines.F90  util_routines.f90  xdr_routines_mod.f90
fortran/bfield_library_jdl/src/LIBSTELL_LIGHT/: biotsavart.f  bsc_T.f  stel_kinds.f
fortran/bfield_library_jdl/src/fxdr/: fxdr_module.f90
fortran/bfield_library_jdl/tests/: poincare_settings.nml  test_Pavel_beval.f90  test_bfield_geq_bicub.compile  test_bfield_geq_bicub.f90  test_bfield_rmp.f90  test_bfield_rmp_d3d.f90  test_calc_sep.compile  test_calc_sep.f90  test_fieldline_follow_geq.f90  test_fieldline_follow_geq_with_int.f90  test_fieldline_follow_rmp.f90  test_fieldline_follow_screened.f90  test_find_xpt.compile  test_find_xpt.f90  test_find_xpt_m3dc1.compile  test_find_xpt_m3dc1.f90  test_footprint_rmp.f90  test_footprint_screened.f90  test_footprint_screened_reduced.f90  test_lin_interp.f90  test_locate.f90  test_m3dc1_bfield.f90  test_m3dc1_bfield_phi_domain.f90  test_quicksort.f90  test_read_gfile.f90
fortran/bfield_library_jdl/tests_updated/: Makefile  calc_psiN_m3dc1.f90  compare_m3dc1_and_coils.f90  g160884.03014_251  test_bfield_bgrid.f90  test_bfield_ipec_d3d.f90  test_bfield_rmp_d3d.f90  test_bfield_xpand_d3d.f90  test_find_xpt_gonly.f90  test_int_curve_curve.f90  test_int_two_lines.f90  test_m3dc1_bfield.f90  test_read_gfile.f90  test_vmec_bfield.f90  test_vmec_build_single_coil.f90  test_vmec_fieldline.f90  test_vmec_fieldline_single.f90
fortran/bnorm/src/: bnorm_driver.f90  bnorm_routines.f90
fortran/bnorm/test/: Brmn.out  bnorm_settings.nml  marr.out  pn.out
fortran/poincare/src/: poincare_driver.f90  poincare_driver_2d.f90
fortran/xdr_to_ascii/: Makefile  dump_xdr_to_ascii.f90  settings.nml
idl/Profiles/: calc_tanh_multi.pro
idl/bfield/: g3d.pro
idl/util/: get_info.pro  handy.pro  mycolors.pro
matlab/bfield_library_jdl/: LICENSE  add_log_log_plot_line.m  get_resScale.m  make_bgrid.m  make_poincare_plots_OP12a_configs.m  test_make_grid_from_coils.m
matlab/bfield_library_jdl/ADAS_routines/: calc_mfp.m  find_adf15_transition.m  get_adas_adf11_data.m  interp_adas_rate_coefficient.m  plot_Lz_adas.m  plot_adas_data.m  plot_adas_data_recomb_ioniz_hydrogen.m  plot_adf15_interp.m  plot_iz_coeff_interp.m  read_adas_adf11_file.m  read_adas_adf15_file.m  test_adas_interp.m  test_adas_spline_fits.m
matlab/bfield_library_jdl/AMJUEL_routines/: eval_AMJUEL_H2_fit.m  eval_AMJUEL_H3_fit.m  eval_AMJUEL_H4_fit.m  plot_AMJUEL_for_MPEX.m  return_AMJUEL_data.m  test_AMJUEL_fit.m
matlab/bfield_library_jdl/C2_routines/: c2_test_driver.m  plot_2d_c2.m  plot_c2_grid.m  plot_omp_profiles_c2.m  point2cell_c2.m  read_c2_data.m  read_c2_grid.m  read_c2_instate.m
matlab/bfield_library_jdl/D3D/: build_d3d_ccoils_jl.m  build_d3d_icoils_jl.m  ccoilsd3.i.txt  check_elm_timing.m  d3ccoils.f.txt  d3icoils.txt  find_shift_to_get_Tesep.m  find_spikes.m  find_spikes_test.m  icoilsd3.txt  make_downstream_data_file.m  plot_2DTS_fit_data.m  plot_all_profdb_data.m  plot_d3d_irtv_data.m  plot_ir_profile.m  plot_lp.m  process_LP.m  read_2dts_dat_file.m  write_2dts_data_at_target.m
matlab/bfield_library_jdl/EFIT_routines/: Note.txt  calc_Bangle_g.m  calc_Bangle_g_at_RZmids.m  calc_R_minus_Rsep_midplane_from_psiN.m  calc_R_minus_Rsep_midplane_map.m  calc_Rsep_midplane.m  calc_bicub_interpolation_inds.m  calc_divertor_closure_param.m  calc_psi.m  calc_psiN.m  calc_psi_derivs.m  calc_rho.m  calc_rho_midplane_from_psiN.m  calc_rho_midplane_map.m  calc_tokamak_shaping_parameters.m  find_q_resonances.m  find_xpt_jl.m  flip_g.m  get_bicub_mat.m  get_bicub_mat_inv.m  get_pest_coords.m  get_psi_bicub.m  get_psi_bicub_coeffs.m  get_psi_bicub_coeffs_inv.m  plot_gfile.m  plot_pfile.m  plot_sep_g.m  postprocess_gfile.m  reada_g3d.m  readg_g3d.m  readg_g3d_simple.m  readp_g3d.m  refine_gfile.m  refine_psiN.m  stress_test_find_xpt.m  symm_g.m  write_gfile.m  write_pfile.m
matlab/bfield_library_jdl/FLARE_routines/: flare_plot_boundary.m  flare_plot_poincare.m  modify_W7X_vessel_for_grid_generation.m  plot_FLARE_lc.m  test_make_FLARE_grid_from_coils.m
matlab/bfield_library_jdl/Interpolation/: TEST_g3d_eval.m  TEST_interpolation_routines.m  TEST_locate.m  TEST_test_functions.m  eval_interp_test.m  linear_interp_1d.m  linear_interp_2d.m
matlab/bfield_library_jdl/Lz/: plot_Lz_ntau.m
matlab/bfield_library_jdl/M3DC1_routines/: bfield_m3dc1.m  convert_m3dc1_dump_to_mat.m  load_M3DC1_file.m
matlab/bfield_library_jdl/MPEX/: bfield_circular_coil.m  build_Proto_coils.m  build_Proto_coils_jackson.m  build_circular_coil.m  build_circular_coil_jackson.m  calculate_mirror_trapping.m  clip_fl_at_vessel.m  coil_2_current_scan.m  coil_H_current_scan.m  driver_make_characteristic_plots.m  eval_mirror_ratios.m  find_lcfs.m  get_MPEX_geometry.m  get_Proto_current.m  get_Proto_geometry.m  get_coil_cross_sections.m  grid_proto_shot.m  make_characteristic_plot.m  make_characteristic_plot_from_target.m  make_larry_coils.m  make_movie_IR.m  make_ted_plots.m  map_pt_to_target_mpex.m  plot_IR_data_raw.m  plot_current_scan1.m  setup_MPEX_coils.m  (+7 more)
python/: EFITutils.py  GeoUtils.py  __init__.py  divertor_build.py
python/MPEX/: __init__.py
python/calc_B/: __init__.py  circular_coils.py
scripts/: convert_ogr_to_structure_dat  double_gfile_resolution  gfile_vessel  order_ogr  plot_ogr  refine_ogr_elements  simplify_ogr_file
(+364 files in other folders)
